INCLUDES = -I$(top_srcdir)
noinst_PROGRAMS = capture_frames poll poll2

capture_frames_SOURCES = capture_frames.c
capture_frames_LDADD = ../libb3dfg/libb3dfg.la -lb3dfg

poll_SOURCES = poll.c
poll_LDADD = ../libb3dfg/libb3dfg.la -lb3dfg

poll2_SOURCES = poll2.c
poll2_LDADD = ../libb3dfg/libb3dfg.la -lb3dfg
